force-app/main/default/objects/Training_Flat_Rate__c/Training_Flat_Rate__c.object-meta.xml
<CustomObject>
    <label>Training Flat Rate</label>
    <nameField>
        <label>Training Flat Rate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Training Flat Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>