force-app/main/default/objects/Training_Flat_Rate__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Training Flat Rates</relationshipLabel>
    <relationshipName>Training_Flat_Rates</relationshipName>
    <type>Lookup</type>
</CustomField>