force-app/main/default/objects/Training_Flat_Rate__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Training Flat Rates</relationshipLabel>
    <relationshipName>Training_Flat_Rates</relationshipName>
    <type>Lookup</type>
</CustomField>