force-app/main/default/objects/Training_Flat_Rate__c/fields/Students_allowed__c.field-meta.xml
<CustomField>
    <fullName>Students_allowed__c</fullName>
    <label>Students Allowed</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>