force-app/main/default/objects/Training_Flat_Rate__c/fields/Students_Enrolled__c.field-meta.xml
<CustomField>
    <fullName>Students_Enrolled__c</fullName>
    <label>Students Enrolled</label>
    <summaryForeignKey>Flat_Rate_Enrollment__c.Training_Flat_Rate__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>