force-app/main/default/objects/Training_Flat_Rate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Students_allowed__c</columns>
    <columns>Students_Enrolled__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>